fixed alignments issues with search bar

--- a/style.css
+++ b/style.css
@@ -44,15 +44,14 @@ body{
   justify-content: center;
 }
 .walletAddress {
-  height: 100%;
+  height: 40px;
   width: 80%;
   margin: 0;
-  padding: 0px 0px 0px 15px;
+  padding: 0px 0px 0px 20px;
   outline: none;
-  border: none;
+  border: 2px solid var(--purple);
   border-radius: 50px 0px 0px 50px;
   background-color: var(--lighDark);
-  border: 1px solid var(--purple);
   color: var(--purple);
   transition: 0.3s all ease-in-out;
 }
@@ -66,7 +65,7 @@ body{
   margin: 0;
   width: 15%;
   padding: 10px;
-  height: 100%;
+  height: 44px;
   border: 2px solid var(--purple);
   border-radius:0px 50px 50px 0px;
   background-color: var(--purple);
